docs: Updating the description of projects and adding autobiography

--- a/Aquino_Exercise_2.html
+++ b/Aquino_Exercise_2.html
@@ -34,22 +34,26 @@ Author: Lyka Joyce Aquino -->
     <div class="project">
       <img src="images/project_1_blooms_and_bees.png" alt="Project 1">
       <h3>Project 1: Blooms && Bees</h3>
-      <p>Description</p>    
+      <p>Honey bees will collect blooms (flowers) that will be converted into honey (points), the game will continue until the bee dies (from a collision with a praying mantis, dragonflies, ambush bugs, or webs) or reach the checkpoint.</p>
+   
     </div>
     <div class="project">
         <img src="images/project_2_weather.png" alt="Project 2">
         <h3>Project 2: Weather Portal</h3>
-        <p>Description</p>    
+        <p>This website provides users with the ability to input a city from the United States and receive the current weather conditions for that location. API Used: openweathermap.org</p>
+     
     </div>
     <div class="project">
       <img src="images/p3.png" alt="Project 3">
       <h3>Project 3:  Unbeatable Tic-Tac-Toe</h3>
-      <p>Description</p>    
+      <p>Utilized an advanced AI technique known as the Minimax algorithm with alpha-beta pruning, which ensures the AI opponent makes strategic moves, resulting in a game where winning is highly challenging or virtually impossible for the player.
+      </p>
     </div>
     <div class="project">
       <img src="images/p4.png" alt="Project 4">
       <h3>Project 4: Machine Learning Algorithms</h3>
-      <p>Description</p>    
+      <p>I implemented the following algorithms for my machine learning subject which helped me gain a deeper understanding of various concepts and approaches in artificial intelligence and data analysis:  BFS/DFS (Breadth-First Search / Depth-First Search), A (A-star) Algorithm, Bayes' Rule (Bayesian Inference), KNN Algorithm (K Nearest Neighbors), K-Means Clustering Algorithm, Markov Chain, Hidden Markov Model (HMM), Min-Max Algorithm</p>
+    
    </div>    
   </section>
 
@@ -67,7 +71,14 @@ Author: Lyka Joyce Aquino -->
   </section>
   <section id="about" class="autobiography">
     <h2>Autobiography</h2>
-    <p>Description</p>    
+    <p>I am a <b>computer science student</b> driven by a passion for problem-solving and innovation. From a young age, I was captivated by the allure of technology and its potential to reshape the world. As I embarked on my academic journey, I quickly found myself immersed in the intricacies of coding and algorithm design. With each line of code, I discovered a new avenue for creativity and expression, fueling my desire to push the boundaries of what is possible.
+    </p>
+    <p>
+      Throughout my studies, I have embraced <b>challenges as opportunities for growth</b>. Whether it was tackling complex data structures or delving into machine learning algorithms, I approached each obstacle with determination and curiosity. Collaborating with peers on projects taught me the value of teamwork and communication in software development. These experiences not only honed my technical skills but also fostered a deep appreciation for the collaborative nature of the field.
+    </p>
+    <p>
+      Looking ahead, I am excited to continue my journey as a computer science student, eager to contribute to cutting-edge advancements that will shape the future. With a foundation built on perseverance and a relentless pursuit of knowledge, I am confident in my ability to navigate the ever-evolving landscape of technology. As I strive to make <b>meaningful contributions</b> to the field, I am committed to remaining curious, adaptable, and dedicated to pushing the boundaries of what is possible in the world of computer science.
+    </p>
  </section>
   <section id = "footer" class="footer">
     <p>&copy; 2024 My Portfolio | 9033 Mt. Banaue St. Umali Subdivision, Batong Malake, Los Baños Laguna, 4030</p>
