docs: I added comments to my html file.

--- a/Aquino_Exercise_2.html
+++ b/Aquino_Exercise_2.html
@@ -8,68 +8,79 @@ Author: Lyka Joyce Aquino -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css"> <!-- Linking to an external stylesheet -->
 </head>
+
 <body>
   <header>
-    <img src="images/logo.png" alt="Logo" class="logo">
+    <img src="images/logo.png" alt="Logo" class="logo"> <!-- Logo image -->
     <nav>
-        <a href="#featured">Featured</a>
-        <a href="#Previous_projects">Projects</a>
-        <a href="#skills_title">Skills</a>
-        <a href="#about">About</a>
-        <a href="#contact-container">Contact Information</a>
+        <a href="#featured">Featured</a> <!-- Link to featured section -->
+        <a href="#Previous_projects">Projects</a> <!-- Link to projects section -->
+        <a href="#skills_title">Skills</a> <!-- Link to skills section -->
+        <a href="#about">About</a> <!-- Link to about section -->
+        <a href="#contact-container">Contact Information</a> <!-- Link to contact section -->
     </nav>
-</header>
+  </header>
 
   <section id="featured" class="featured-photo">
+    <!-- Featured section displaying a prominent photo -->
     <img src="images/featured_photo.jpg" alt="Featured Photo">
   </section>
 
   <div id="Previous_projects">
-    <h2>Previous projects:</h2>
+    <h2>Previous projects:</h2> <!-- Heading for previous projects section -->
   </div>
   
   <section id="projects" class="projects">
+    <!-- Projects section containing individual project details -->
     <div class="project">
+      <!-- Individual project no. 1 -->
       <img src="images/project_1_blooms_and_bees.png" alt="Project 1">
       <h3>Project 1: Blooms && Bees</h3>
       <p>Honey bees will collect blooms (flowers) that will be converted into honey (points), the game will continue until the bee dies (from a collision with a praying mantis, dragonflies, ambush bugs, or webs) or reach the checkpoint.</p>
-   
     </div>
+
     <div class="project">
-        <img src="images/project_2_weather.png" alt="Project 2">
-        <h3>Project 2: Weather Portal</h3>
-        <p>This website provides users with the ability to input a city from the United States and receive the current weather conditions for that location. API Used: openweathermap.org</p>
-     
+      <!-- Individual project no. 2 -->
+      <img src="images/project_2_weather.png" alt="Project 2">
+      <h3>Project 2: Weather Portal</h3>
+      <p>This website provides users with the ability to input a city from the United States and receive the current weather conditions for that location. API Used: openweathermap.org</p>
     </div>
+
     <div class="project">
+      <!-- Individual project no. 3 -->
       <img src="images/p3.png" alt="Project 3">
       <h3>Project 3:  Unbeatable Tic-Tac-Toe</h3>
       <p>Utilized an advanced AI technique known as the Minimax algorithm with alpha-beta pruning, which ensures the AI opponent makes strategic moves, resulting in a game where winning is highly challenging or virtually impossible for the player.
       </p>
     </div>
+
     <div class="project">
+      <!-- Individual project no. 4 -->
       <img src="images/p4.png" alt="Project 4">
       <h3>Project 4: Machine Learning Algorithms</h3>
-      <p>I implemented the following algorithms for my machine learning subject which helped me gain a deeper understanding of various concepts and approaches in artificial intelligence and data analysis:  BFS/DFS (Breadth-First Search / Depth-First Search), A (A-star) Algorithm, Bayes' Rule (Bayesian Inference), KNN Algorithm (K Nearest Neighbors), K-Means Clustering Algorithm, Markov Chain, Hidden Markov Model (HMM), Min-Max Algorithm</p>
-    
+      <p>I implemented the following algorithms for my machine learning subject which helped me gain a deeper understanding of various concepts and approaches in artificial intelligence and data analysis:  BFS/DFS (Breadth-First Search / Depth-First Search), A (A-star) Algorithm, Bayes' Rule (Bayesian Inference), KNN Algorithm (K Nearest Neighbors), K-Means Clustering Algorithm, Markov Chain, Hidden Markov Model (HMM), Min-Max Algorithm</p>   
    </div>    
   </section>
 
   <div id="skills_title">
-    <h2>Skills:</h2>
+    <h2>Skills:</h2> <!-- Heading for the skills section -->
   </div>
 
   <section id="skills" class="skills">
-
-    <img src="images/skill_1.png" alt="Skill 1">
-    <img src="images/skill_2.png" alt="Skill 2">
-    <img src="images/skill_3.png" alt="Skill 3">
-    <img src="images/skill_4.png" alt="Skill 4">
-    <img src="images/skill_5.png" alt="Skill 5">
+    <!-- Skills section containing images representing different skills -->
+    <img src="images/skill_1.png" alt="Skill 1"> <!-- Image representing skill 1 -->
+    <img src="images/skill_2.png" alt="Skill 2"> <!-- Image representing skill 2 -->
+    <img src="images/skill_3.png" alt="Skill 3"> <!-- Image representing skill 3 -->
+    <img src="images/skill_4.png" alt="Skill 4"> <!-- Image representing skill 4 -->
+    <img src="images/skill_5.png" alt="Skill 5"> <!-- Image representing skill 5 -->
   </section>
+  <!-- End of skills section -->
+
+
   <section id="about" class="autobiography">
+  <!-- About section containing autobiographical information -->
     <h2>Autobiography</h2>
     <p>I am a <b>computer science student</b> driven by a passion for problem-solving and innovation. From a young age, I was captivated by the allure of technology and its potential to reshape the world. As I embarked on my academic journey, I quickly found myself immersed in the intricacies of coding and algorithm design. With each line of code, I discovered a new avenue for creativity and expression, fueling my desire to push the boundaries of what is possible.
     </p>
@@ -79,20 +90,24 @@ Author: Lyka Joyce Aquino -->
     <p>
       Looking ahead, I am excited to continue my journey as a computer science student, eager to contribute to cutting-edge advancements that will shape the future. With a foundation built on perseverance and a relentless pursuit of knowledge, I am confident in my ability to navigate the ever-evolving landscape of technology. As I strive to make <b>meaningful contributions</b> to the field, I am committed to remaining curious, adaptable, and dedicated to pushing the boundaries of what is possible in the world of computer science.
     </p>
- </section>
-  <section id = "footer" class="footer">
-    <p>&copy; 2024 My Portfolio | 9033 Mt. Banaue St. Umali Subdivision, Batong Malake, Los Baños Laguna, 4030</p>
   </section>
 
-  <div id = "contact-container" class="contact-container">
-    <h2>Contact Information</h2>
+  <!-- Contact information section -->
+  <div id="contact-container" class="contact-container">
+    <h2>Contact Information</h2> <!-- Heading for the contact information section -->
     <ul>
-      <li><strong>Phone:</strong> <a href="tel:+639602824654">(+63)9602824654</a></li>
-      <li><strong>Facebook:</strong> <a href="https://www.facebook.com/aquinolykajoyce/">Lyka Joyce Aquino</a></li>
-      <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lyka-joyce-aquino-5208b2236/">Lyka Joyce Aquino</a></li>
-      <li><strong>Gmail:</strong> <a href="aquinolykajoyce@gmail.com">aquinolykajoyce@gmail.com</a></li>
+        <!-- List of contact information -->
+        <li><strong>Phone:</strong> <a href="tel:+639602824654">(+63)9602824654</a></li> <!-- Phone number with link -->
+        <li><strong>Facebook:</strong> <a href="https://www.facebook.com/aquinolykajoyce/">Lyka Joyce Aquino</a></li> <!-- Facebook profile link -->
+        <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lyka-joyce-aquino-5208b2236/">Lyka Joyce Aquino</a></li> <!-- LinkedIn profile link -->
+        <li><strong>Gmail:</strong> <a href="aquinolykajoyce@gmail.com">aquinolykajoyce@gmail.com</a></li> <!-- Gmail address with mailto link -->
     </ul>
   </div>
 
-</body>
+  <!-- Footer section -->
+  <section id="footer" class="footer">
+    <p>&copy; 2024 My Portfolio | 9033 Mt. Banaue St. Umali Subdivision, Batong Malake, Los Baños Laguna, 4030</p> <!-- Copyright notice with address -->
+  </section>
+  
+  </body>
 </html>
